--- a/portfolio.html
+++ b/portfolio.html
@@ -14,5 +14,6 @@
 <img src="portfolio.jpg" alt="somethimg went wrong" class="portfolio">
 <img src="hunter.jpg.PNG" alt="something went wrong" class="bubbles">
 <img src="scratchlogo.png" alt="something went wrong" class="scratch">
+    <p class="write">I created a basic Website using the code on your right</p>
   </body>
 </html>
